# WinDeCon

./: Cargo.toml  README.md  build.rs
hid/: Cargo.toml
hid/src/: hid_device.rs
src/: cli_parser.rs  lib.rs  macros.rs  main.rs  setup.rs
src/hid/: hid_device.rs  mod.rs
